REGRESSION (r245208): compositing/shared-backing/sharing-bounds-non-clipping-shared-layer.html asserts https://bugs.webkit.org/show_bug.cgi?id=197818 <rdar://problem/50705762>

Reviewed by Simon Fraser.

Source/WebCore:

Tests: fast/scrolling/ios/event-region-scale-transform-shared.html
       fast/scrolling/ios/event-region-translate-transform-shared.html

This fixes the assert. However the added tests demonstrate that transform is not taken into account
when computing the event region, https://bugs.webkit.org/show_bug.cgi?id=197836.

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateEventRegion):

LayoutTests:

* fast/scrolling/ios/event-region-scale-transform-shared-expected.txt: Added.
* fast/scrolling/ios/event-region-scale-transform-shared.html: Added.
* fast/scrolling/ios/event-region-translate-transform-shared-expected.txt: Added.
* fast/scrolling/ios/event-region-translate-transform-shared.html: Added.
* platform/ios-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/211969@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245242 268f45cc-cd09-0410-ab3c-d52691b4dbfc