Source/WebCore/rendering/RenderLayerBacking.cpp
@@ -1489,8 +1489,8 @@ void RenderLayerBacking::updateEventRegion()
     auto paintFlags = RenderLayer::paintLayerPaintingCompositingAllPhasesFlags() | RenderLayer::PaintLayerCollectingEventRegion;
     m_owningLayer.paintLayerContents(nullContext, paintingInfo, paintFlags);
 
-    for (auto& layerWeakPtr : m_backingSharingLayers)
-        layerWeakPtr->paintLayerContents(nullContext, paintingInfo, paintFlags);
+    for (auto& layer : m_backingSharingLayers)
+        layer->paintLayerWithEffects(nullContext, paintingInfo, paintFlags);
 
     auto contentOffset = roundedIntSize(contentOffsetInCompositingLayer());
     eventRegion.translate(contentOffset);
